# gdr3apcal

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  gdr3apcal.html  gdr3apcal.models.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: documentation.yml  unittests.yaml
_modules/: index.html
_modules/gdr3apcal/: calibration.html  calibration_models.html  downloader.html  repositories.html
_modules/gdr3apcal/models/: mars_mh.html
_sources/: gdr3apcal.rst  index.rst
_static/: documentation_options.js
docs/: Makefile  conf.py  gdr3apcal.models.rst  gdr3apcal.rst  modules.rst
examples/: notebook.ipynb  run-unit-tests.ipynb
src/gdr3apcal/: __init__.py  calibration.py  calibration_models.py  config.py  configuration.yaml  downloader.py  mars_converter.py  repositories.py  unittests.py
src/gdr3apcal/models/: MH-mars-Payne-degree-3-threshold-0.001.joblib  __init__.py  mars_mh.py
test/: test_code.py  test_metallicity_model.py
