[metadata]
name = gdr3apcal
version = 0.4
author = Rene Andrae
author_email = andrae@mpia.de
description = Tools providing the user with empirical calibrations models of the stellar parameters from GSP-Phot.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
url = https://github.com/mpi-astronomy/gdr3apcal
project_urls =
    Bug Tracker = https://github.com/mpi-astronomy/gdr3apcal/issues
    Sourse Code = https://github.com/mpi-astronomy/gdr3apcal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7
include_package_data = True

# Example of how to add dependencies:
install_requires =
    astropy
    dill
    importlib-metadata >= 2.0 ; python_version < "3.8"
    joblib
    numpy
    pandas
    pyyaml
    requests
    scikit-learn

[options.packages.find]
where = src

[options.extras_require]
mars =
  pyearth @ git+https://github.com/scikit-learn-contrib/py-earth@v0.2dev
docs =
  markupsafe<2.10
  matplotlib
  myst-nb
  sphinx
  sphinx-book-theme
test =
  pytest
  pytest-doctestplus
  flake8
  coverage